--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
 	<head>
-		<title>Polygen</title>
+		<title>PolyGen</title>
 		<link rel="manifest" href="manifest.json">
 		<link rel="stylesheet" href="css/index.css">
 		<link rel="icon" href="img/icon32x32.png" type="image/png">
@@ -9,7 +9,7 @@
 		<meta charset="utf-8">
 		<meta name="theme-color" content="#ff6400">
 		<meta name="viewport" content="width=device-width">
-		<meta name="description" content="A Web app">
+		<meta name="description" content="A polygon generation tool">
 	</head>
 	<body>
 		<h1>Polygon</h1>
